parser.out
Created by PLY (http://www.dabeaz.com/ply)

Unused terminals:

    UMINUS

Grammar

Rule 0     S' -> statement
Rule 1     statement -> assignment
Rule 2     statement -> expression
Rule 3     statement -> polynomial
Rule 4     statement -> evaluation
Rule 5     evaluation -> EVAL LPAREN VARIABLE EQUAL expression COMMA expression RPAREN
Rule 6     polynomial -> POLY LPAREN VARIABLE COMMA expression RPAREN
Rule 7     assignment -> VARIABLE EQUAL expression
Rule 8     expression -> SIN LPAREN expression RPAREN
Rule 9     expression -> COS LPAREN expression RPAREN
Rule 10    expression -> LOG LPAREN expression RPAREN
Rule 11    expression -> EXP LPAREN expression RPAREN
Rule 12    expression -> SQRT LPAREN expression RPAREN
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression TIMES expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> expression POWER expression
Rule 18    expression -> LPAREN expression RPAREN
Rule 19    expression -> MINUS expression
Rule 20    expression -> INT
Rule 21    expression -> FLOAT
Rule 22    expression -> PI
Rule 23    expression -> VARIABLE

Terminals, with rules where they appear

COMMA                : 5 6
COS                  : 9
DIVIDE               : 16
EQUAL                : 5 7
EVAL                 : 5
EXP                  : 11
FLOAT                : 21
INT                  : 20
LOG                  : 10
LPAREN               : 5 6 8 9 10 11 12 18
MINUS                : 14 19
PI                   : 22
PLUS                 : 13
POLY                 : 6
POWER                : 17
RPAREN               : 5 6 8 9 10 11 12 18
SIN                  : 8
SQRT                 : 12
TIMES                : 15
UMINUS               : 
VARIABLE             : 5 6 7 23
error                : 

Nonterminals, with rules where they appear

assignment           : 1
evaluation           : 4
expression           : 2 5 5 6 7 8 9 10 11 12 13 13 14 14 15 15 16 16 17 17 18 19
polynomial           : 3
statement            : 0


state 0

    (0) S' -> . statement
    (1) statement -> . assignment
    (2) statement -> . expression
    (3) statement -> . polynomial
    (4) statement -> . evaluation
    (7) assignment -> . VARIABLE EQUAL expression
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE
    (6) polynomial -> . POLY LPAREN VARIABLE COMMA expression RPAREN
    (5) evaluation -> . EVAL LPAREN VARIABLE EQUAL expression COMMA expression RPAREN

    VARIABLE        shift and go to state 6
    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    POLY            shift and go to state 17
    EVAL            shift and go to state 18

    statement                      shift and go to state 1
    assignment                     shift and go to state 2
    expression                     shift and go to state 3
    polynomial                     shift and go to state 4
    evaluation                     shift and go to state 5

state 1

    (0) S' -> statement .



state 2

    (1) statement -> assignment .

    $end            reduce using rule 1 (statement -> assignment .)


state 3

    (2) statement -> expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . POWER expression

    $end            reduce using rule 2 (statement -> expression .)
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    TIMES           shift and go to state 21
    DIVIDE          shift and go to state 22
    POWER           shift and go to state 23


state 4

    (3) statement -> polynomial .

    $end            reduce using rule 3 (statement -> polynomial .)


state 5

    (4) statement -> evaluation .

    $end            reduce using rule 4 (statement -> evaluation .)


state 6

    (7) assignment -> VARIABLE . EQUAL expression
    (23) expression -> VARIABLE .

    EQUAL           shift and go to state 24
    PLUS            reduce using rule 23 (expression -> VARIABLE .)
    MINUS           reduce using rule 23 (expression -> VARIABLE .)
    TIMES           reduce using rule 23 (expression -> VARIABLE .)
    DIVIDE          reduce using rule 23 (expression -> VARIABLE .)
    POWER           reduce using rule 23 (expression -> VARIABLE .)
    $end            reduce using rule 23 (expression -> VARIABLE .)


state 7

    (8) expression -> SIN . LPAREN expression RPAREN

    LPAREN          shift and go to state 25


state 8

    (18) expression -> LPAREN . expression RPAREN
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE

    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    VARIABLE        shift and go to state 27

    expression                     shift and go to state 26

state 9

    (9) expression -> COS . LPAREN expression RPAREN

    LPAREN          shift and go to state 28


state 10

    (10) expression -> LOG . LPAREN expression RPAREN

    LPAREN          shift and go to state 29


state 11

    (11) expression -> EXP . LPAREN expression RPAREN

    LPAREN          shift and go to state 30


state 12

    (12) expression -> SQRT . LPAREN expression RPAREN

    LPAREN          shift and go to state 31


state 13

    (19) expression -> MINUS . expression
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE

    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    VARIABLE        shift and go to state 27

    expression                     shift and go to state 32

state 14

    (20) expression -> INT .

    PLUS            reduce using rule 20 (expression -> INT .)
    MINUS           reduce using rule 20 (expression -> INT .)
    TIMES           reduce using rule 20 (expression -> INT .)
    DIVIDE          reduce using rule 20 (expression -> INT .)
    POWER           reduce using rule 20 (expression -> INT .)
    $end            reduce using rule 20 (expression -> INT .)
    RPAREN          reduce using rule 20 (expression -> INT .)
    COMMA           reduce using rule 20 (expression -> INT .)


state 15

    (21) expression -> FLOAT .

    PLUS            reduce using rule 21 (expression -> FLOAT .)
    MINUS           reduce using rule 21 (expression -> FLOAT .)
    TIMES           reduce using rule 21 (expression -> FLOAT .)
    DIVIDE          reduce using rule 21 (expression -> FLOAT .)
    POWER           reduce using rule 21 (expression -> FLOAT .)
    $end            reduce using rule 21 (expression -> FLOAT .)
    RPAREN          reduce using rule 21 (expression -> FLOAT .)
    COMMA           reduce using rule 21 (expression -> FLOAT .)


state 16

    (22) expression -> PI .

    PLUS            reduce using rule 22 (expression -> PI .)
    MINUS           reduce using rule 22 (expression -> PI .)
    TIMES           reduce using rule 22 (expression -> PI .)
    DIVIDE          reduce using rule 22 (expression -> PI .)
    POWER           reduce using rule 22 (expression -> PI .)
    $end            reduce using rule 22 (expression -> PI .)
    RPAREN          reduce using rule 22 (expression -> PI .)
    COMMA           reduce using rule 22 (expression -> PI .)


state 17

    (6) polynomial -> POLY . LPAREN VARIABLE COMMA expression RPAREN

    LPAREN          shift and go to state 33


state 18

    (5) evaluation -> EVAL . LPAREN VARIABLE EQUAL expression COMMA expression RPAREN

    LPAREN          shift and go to state 34


state 19

    (13) expression -> expression PLUS . expression
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE

    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    VARIABLE        shift and go to state 27

    expression                     shift and go to state 35

state 20

    (14) expression -> expression MINUS . expression
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE

    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    VARIABLE        shift and go to state 27

    expression                     shift and go to state 36

state 21

    (15) expression -> expression TIMES . expression
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE

    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    VARIABLE        shift and go to state 27

    expression                     shift and go to state 37

state 22

    (16) expression -> expression DIVIDE . expression
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE

    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    VARIABLE        shift and go to state 27

    expression                     shift and go to state 38

state 23

    (17) expression -> expression POWER . expression
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE

    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    VARIABLE        shift and go to state 27

    expression                     shift and go to state 39

state 24

    (7) assignment -> VARIABLE EQUAL . expression
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE

    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    VARIABLE        shift and go to state 27

    expression                     shift and go to state 40

state 25

    (8) expression -> SIN LPAREN . expression RPAREN
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE

    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    VARIABLE        shift and go to state 27

    expression                     shift and go to state 41

state 26

    (18) expression -> LPAREN expression . RPAREN
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . POWER expression

    RPAREN          shift and go to state 42
    PLUS            shift and go to state 19
    MINUS           shift and go to state 20
    TIMES           shift and go to state 21
    DIVIDE          shift and go to state 22
    POWER           shift and go to state 23


state 27

    (23) expression -> VARIABLE .

    RPAREN          reduce using rule 23 (expression -> VARIABLE .)
    PLUS            reduce using rule 23 (expression -> VARIABLE .)
    MINUS           reduce using rule 23 (expression -> VARIABLE .)
    TIMES           reduce using rule 23 (expression -> VARIABLE .)
    DIVIDE          reduce using rule 23 (expression -> VARIABLE .)
    POWER           reduce using rule 23 (expression -> VARIABLE .)
    $end            reduce using rule 23 (expression -> VARIABLE .)
    COMMA           reduce using rule 23 (expression -> VARIABLE .)


state 28

    (9) expression -> COS LPAREN . expression RPAREN
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE

    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    VARIABLE        shift and go to state 27

    expression                     shift and go to state 43

state 29

    (10) expression -> LOG LPAREN . expression RPAREN
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE

    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    VARIABLE        shift and go to state 27

    expression                     shift and go to state 44

state 30

    (11) expression -> EXP LPAREN . expression RPAREN
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE

    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    VARIABLE        shift and go to state 27

    expression                     shift and go to state 45

state 31

    (12) expression -> SQRT LPAREN . expression RPAREN
    (8) expression -> . SIN LPAREN expression RPAREN
    (9) expression -> . COS LPAREN expression RPAREN
    (10) expression -> . LOG LPAREN expression RPAREN
    (11) expression -> . EXP LPAREN expression RPAREN
    (12) expression -> . SQRT LPAREN expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression POWER expression
    (18) expression -> . LPAREN expression RPAREN
    (19) expression -> . MINUS expression
    (20) expression -> . INT
    (21) expression -> . FLOAT
    (22) expression -> . PI
    (23) expression -> . VARIABLE

    SIN             shift and go to state 7
    COS             shift and go to state 9
    LOG             shift and go to state 10
    EXP             shift and go to state 11
    SQRT            shift and go to state 12
    LPAREN          shift and go to state 8
    MINUS           shift and go to state 13
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    PI              shift and go to state 16
    VARIABLE        shift and go to state 27

    expression                     shift and go to state 46

state 32

    (19) expression -> MINUS expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . POWER expression

    PLUS            reduce using rule 19 (expression -> MINUS expression .)
    MINUS           reduce using rule 19 (expression -> MINUS expression .)
    TIMES           reduce using rule 19 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 19 (expression -> MINUS expression .)
    POWER           reduce using rule 19 (expression -> MINUS expression .)
    $end            reduce using rule 19 (expression -> MINUS expression .)
    RPAREN          reduce using rule 19 (expression -> MINUS expression .)
    COMMA           reduce using rule 19 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 19 ]
  ! MINUS           [ shift and go to state 20 ]
  ! TIMES           [ shift and go to state 21 ]
  ! DIVIDE          [ shift and go to state 22 ]
  ! POWER           [ shift and go to state 23 ]


state 33

    (6) polynomial -> POLY LPAREN . VARIABLE COMMA expression RPAREN

    VARIABLE        shift and go to state 47


state 34

    (5) evaluation -> EVAL LPAREN . VARIABLE EQUAL expression COMMA expression RPAREN

    VARIABLE        shift and go to state 48


state 35

    (13) expression -> expression PLUS expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . POWER expression

    PLUS            reduce using rule 13 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 13 (expression -> expression PLUS expression .)
    $end            reduce using rule 13 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 13 (expression -> expression PLUS expression .)
    COMMA           reduce using rule 13 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 21
    DIVIDE          shift and go to state 22
    POWER           shift and go to state 23

  ! TIMES           [ reduce using rule 13 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 13 (expression -> expression PLUS expression .) ]
  ! POWER           [ reduce using rule 13 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 19 ]
  ! MINUS           [ shift and go to state 20 ]


state 36

    (14) expression -> expression MINUS expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . POWER expression

    PLUS            reduce using rule 14 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 14 (expression -> expression MINUS expression .)
    $end            reduce using rule 14 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 14 (expression -> expression MINUS expression .)
    COMMA           reduce using rule 14 (expression -> expression MINUS expression .)
    TIMES           shift and go to state 21
    DIVIDE          shift and go to state 22
    POWER           shift and go to state 23

  ! TIMES           [ reduce using rule 14 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 14 (expression -> expression MINUS expression .) ]
  ! POWER           [ reduce using rule 14 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 19 ]
  ! MINUS           [ shift and go to state 20 ]


state 37

    (15) expression -> expression TIMES expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . POWER expression

    PLUS            reduce using rule 15 (expression -> expression TIMES expression .)
    MINUS           reduce using rule 15 (expression -> expression TIMES expression .)
    TIMES           reduce using rule 15 (expression -> expression TIMES expression .)
    DIVIDE          reduce using rule 15 (expression -> expression TIMES expression .)
    $end            reduce using rule 15 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 15 (expression -> expression TIMES expression .)
    COMMA           reduce using rule 15 (expression -> expression TIMES expression .)
    POWER           shift and go to state 23
